fixing match pref spacing

--- a/src/frontend/components/profile/Profile.css
+++ b/src/frontend/components/profile/Profile.css
@@ -271,6 +271,7 @@
     background: var(--color-neutral-silver);
     border-radius: var(--radius-sm);
     position: relative;
+    margin-top: 50px;
     z-index: 1;
   }
   
